Het woord "geïnvesteerd" aangepast in .tex zodat het nu wel juist is.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@46 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/report_interation_I/report_iteration1.tex
+++ b/ProjectSWOP20102011/src/report_interation_I/report_iteration1.tex
@@ -64,7 +64,7 @@ Jonas Vanthornhout&&\\
 Pieter-Jan Vuylsteke&&\\
 \hline
 \end{tabular}
-\caption{Tijd ge''investeerd door de teamleden}
+\caption{Tijd ge\"investeerd door de teamleden}
 \label{tbl:timeUsage}
 \end{table}
 \newpage
