Package float toegevoegd. Kan da nie zien dat die tabel na de referenties komt. Als ge da wok vindt natuurlijk.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@109 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/report_interation_I/Secties/report_iteration1.tex
+++ b/ProjectSWOP20102011/src/report_interation_I/Secties/report_iteration1.tex
@@ -3,6 +3,7 @@
 \usepackage{fullpage}
 \usepackage[dutch]{babel}
 \usepackage{multirow}
+\usepackage{float}
 
 \title{Software Ontwerp \\ \Large Verslag Iteratie 1}
 \author{Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
