--- a/ProjectSWOP20102011/src/report_interation_I/Secties/sectie4.tex
+++ b/ProjectSWOP20102011/src/report_interation_I/Secties/sectie4.tex
@@ -7,3 +7,9 @@ Welke uitbreidingen hebben we dan in gedachten? In de eerste plaats doet het mod
 Een analoge uitbreiding is deze van de \verb+UnitBuilding+ types. Opnieuw kunnen we hier met een gelijkaardig scenario eenvoudig een extra \verb+Unit+ of \verb+Building+ toe te voegen.
 \paragraph{}
 Ook de userinterface kan verder uitgebreid worden. Hierbij wordt door middel van polymorfisme een framework geleverd, waarbij men makkelijk nieuwe commando's kan toevoegen. Daar we er vanuit gaan dat het aantal use cases nog zal toenemen, is het aanbieden van dergelijke klassen dus te rechtvaardigen.
+\paragraph{}
+Heel wat code in dit project is overbodig, en levert geen bijdrage. Meestal echter heeft dit tot doel om in geval van nieuwe specificaties makkelijk de nieuwe feiten te implementeren. Meestal wordt dit verwezenlijkt door het invoeren van een abstract niveau alvorens de uiteindelijk implementatie te schrijven.
+\paragraph{}
+Een concreet voorbeeld is bijvoorbeeld de \verb+EmergencyValidationCriterium+ klasse. Waarbij een abstractie niveau gemaakt wordt van het selecteren van emergencies op status. Deze aanpassing heeft echter ook andere redenen, bijvoorbeeld omwille van het Information Expert GRASP pattern. Een andere maatregel is het invoeren van de \verb+EmergencyFactory+ klasse, om het generisch (en zelfs reflexief) kunnen toevoegen van types emergencies.
+\paragraph{}
+Verder stelden we vast dat Low Coupeling in de GRASP Patterns meestal uitbreidbaarheid impliceert. Immers zal bij een Low Coupeling van verschillende details abstractie gemaakt kunnen worden. Deze abstracties kunnen dan later concreet ingevuld worden nieuwe klassen.
