--- a/ProjectSWOP20102011/src/report_interation_I/Secties/sectie6.tex
+++ b/ProjectSWOP20102011/src/report_interation_I/Secties/sectie6.tex
@@ -1,21 +1,46 @@
 \section{Projectbeheer}
 \label{projectbeheer}
+\paragraph{}
+Een belangrijk aspect voor het welslagen van een project is de werking binnen het team. hiervoor werden enkele eenvoudige concepten uitgewerkt die de effici\"entie proberen te verhogen. Deze maatregelen worden kort opgesomd, daarnaast bevat deze sectie ook nog een tabel met per teamlid de gepresteerde uren en taken.
+\subsection{Afspraken binnen het team}
+\paragraph{}
+Algemeen werd er gewerkt vanuit ``Extreme Programming'', waarbij men code schrijft in het bijzijn van minstens \'e\'en van de andere teamleden. Uiteraard was dit door incompatibele uurroosters niet altijd mogelijk. Toch werd ieder teamlid aangespoord om frequent elkaars code te inspecteren, wat leidde tot het opsporen van enkele belangrijke fouten/inconsistenties.
+\paragraph{}
+Het ontwerp van het klassendiagram werd wel volledig in het bijzijn van het volledige team uitgevoerd. Immers dient elk lid het ontwerp in grote mate te begrijpen, alvorens er specificaties, testen en code geschreven kan worden.
+\paragraph{}
+Een ander belangrijk aspect was het maken van een vaste afspraak met onze projectbegeleider, deze viel telkens de vrijdagochtend plaats. Door het invoeren van een vaste afspraak is de drempel van het rapporteren van problemen/vragen veel lager en kan men op geregeld basis advies vragen. Bovendien werd telkens na deze afspraak een ontwerpsessie gepland, waarbij de nieuwe inzichten op het ontwerp werden toegepast. Door het feit dat alle teamleden naast dit project nog andere projecten hadden, werden deze gesprekken met de projectbegeleider meestal ondermaats ---dit betekent zonder een concreet model of verslag--- voorbereid. Dit is dan ook een punt waar in de volgende iteratie aan gewerkt moet worden.
+\subsection{Verdeling van het werk}
+Uiteraard kan men niet anders dan bij een dergelijk project het werk opsplitsen in verschillende delen die dan afzonderlijk ge\"implementeerd. De tabel hieronder beschrijft hoe het werk werd opgedeeld samen met de gepresteerde uren per teamlid.
 \begin{table}[H]
 \centering
-\begin{tabular}{|llr|}
+\begin{tabular}{|l|l|r|}
 \hline
-Naam&Type van taak&Duur\\
-\hline
-\hline
-\multirow{3}{*}{Willem Van Onsem}&Implementeren&3h\\
-&Schrijven van testcases&1h\\
-&Ontwerp&5h\\
-\hline
-Jonas Vanthornhout&&\\
-\hline
-Pieter-Jan Vuylsteke&&\\
-\hline
+\textbf{Naam}&\textbf{Soort Taak}&\textbf{Gepresteerde Uren}\\\hline\hline
+\multirow{8}{*}{Willem Van Onsem}&Ontwerp&15h\\
+&Specificaties&8h\\
+&Testen&6h\\
+&Implementaties&20h\\
+&Controllers/User Interface&17h\\
+&Code inspecteren&10h\\
+&Afspraak teambegeleider&4h\\
+&\textit{Totaal}&\textit{80h}\\\hline
+\multirow{8}{*}{Jonas Vanthornhout}&Ontwerp&15h\\
+&Specificaties&15h\\
+&Testen&15h\\
+&Implementaties&15h\\
+&Controllers/User Interface&0h\\
+&Code inspecteren&5h\\
+&Afspraak teambegeleider&4h\\
+&\textit{Totaal}&\textit{69h}\\\hline
+\multirow{8}{*}{Pieter-Jan Vuylsteke}&Ontwerp&15h\\
+&Specificaties&10h\\
+&Testen&10h\\
+&Implementaties&30h\\
+&Controllers/User Interface&1h\\
+&Code inspecteren&5h\\
+&Afspraak teambegeleider&4h\\
+&\textit{Totaal}&\textit{75h}\\\hline
 \end{tabular}
-\caption{Tijd ge\"investeerd door de teamleden}
-\label{tbl:timeUsage}
+\caption{Tabel met geschatte gewerkte uren per teamlid}
+\label{tbl:workedHours}
 \end{table}
