--- a/ProjectSWOP20102011/src/report_interation_I/Secties/sectie2.tex
+++ b/ProjectSWOP20102011/src/report_interation_I/Secties/sectie2.tex
@@ -8,10 +8,56 @@ We deelden het project op in 5 verschillende packages:
  \item de controller package (\verb+projectswop20102011.controllers+)
  \item de userinterface package (\verb+projectswop20102011.userinterface+)
 \end{itemize}
-Deze opdeling gebeurde om de verschillende lagen van elkaar te scheiden, waarbij het domein package enkel van de exceptions afhankelijk is. Dit betekent dat het bestaan van klassen in de domeinlaag niet afhangt van het bestaan van klassen in de factory, controller en userinterface laag.
+Deze opdeling gebeurde om de verschillende lagen van elkaar te onderscheiden, waarbij de domein package enkel afhankelijk is van de exceptions.
+Dit betekent dat het bestaan van klassen in de domeinlaag niet afhangt van het bestaan van klassen in de factory, controller of userinterface laag.
+Er is ook een $\mbox{6}^{\mbox{de}}$ package,
+%HIER ZAL EEN BEETJE GEFOEFELD WORDEN OMDAT IN DE VERB MODE DE TEKST DOORLOOPT TOT BUITEN DE TEKST.
+namelijk \verb+projectswop20102011.userin-+\\\verb+terface.parsers+. Deze is echter een subpackage. Ze maakt deel uit van de userinterface package en staat in voor het ontleden van de invoer.
 \paragraph{}
-We zullen nu de verschillende lagen meer in detail bespreken. Centraal in de domeinlaag bevindt zich uiteraard de klasse \verb+Emergency+. Onder deze klasse komen dan de verschillende types emergencies, die elk een subklasse vormen, met hun specifieke attributen. Elk van deze emergency types heeft een eigen factory, een object die in staat is deze emergencies aan te maken. Hiermee proberen we tegemoet te komen aan mogelijke aanpassingen/toevoegingen van emergencies, waarbij we enkel een factory moeten toevoegen of aanpassen. Deze emergencies worden vervolgens bijgehouden in een \verb+EmergencyList+, dit is een set van verschillende emergencies. Op deze set kan men queries uitvoeren met behulp van een \verb+EmergencyEvaluationCriterium+. Deze abstracte klasse valideert emergencies, waarbij de geslaagde emergencies de nieuwe elementen in een nieuwe \verb+EmergencyList+ worden. Hierdoor zijn we op een eenvoudige manier in staat complexe queries uit te voeren. Een andere belangrijke klasse in de domeinlaag is de \verb+Unit+. Deze abstracte klasse houdt een bepaalde eenheid bij, namelijk een \verb+Firetruck+, \verb+Ambulance+ of \verb+Policecar+. Deze units worden vervolgens aan een bepaalde \verb+Emergency+ toegewezen. Een belangrijk aspect is hierbij dat we geen klassen als \verb+Caller+ of \verb+Call+ of \verb+Operator+ implementeren. Immers wordt nergens in een use case gespecifieerd wat het mogelijke nut hiervan zou zijn. Bovendien impliceert iedere implementatie bijkomende voorwaarden op het model, wat de uitbreidbaarheid niet ten goede komt.
+We zullen nu de verschillende lagen meer in detail bespreken. Zie ook figuur \ref{domein} voor het klassendiagram van de domeinlaag.
+Centraal hierin bevindt zich uiteraard de klasse \verb+Emergency+.
+Onder deze klasse komen dan de verschillende types emergencies. Ze vormen elk een subklasse met hun specifieke attributen.
+Elk van deze emergency types heeft een eigen factory, een object die in staat is deze emergencies aan te maken.
+Hiermee proberen we tegemoet te komen aan mogelijke aanpassingen/toevoegingen van emergencies, waarbij we enkel een factory moeten toevoegen of aanpassen.
+Deze emergencies worden vervolgens bijgehouden in een \verb+EmergencyList+. Dit is een set van verschillende emergencies.
+Op deze set kan men queries uitvoeren met behulp van een \verb+EmergencyEvaluationCriterium+.
+Deze abstracte klasse valideert emergencies, waarbij de geslaagde emergencies de nieuwe elementen in een nieuwe \verb+EmergencyList+ worden.
+Hierdoor zijn we op een eenvoudige manier in staat complexe queries uit te voeren. Een andere belangrijke klasse in de domeinlaag is de \verb+Unit+.
+Deze abstracte klasse houdt een bepaalde eenheid bij, namelijk een \verb+Firetruck+, \verb+Ambulance+ of \verb+Policecar+.
+Deze units worden vervolgens aan een bepaalde \verb+Emergency+ toegewezen.
+Een belangrijk aspect is hierbij dat we geen klassen als \verb+Caller+ of \verb+Call+ of \verb+Operator+ implementeren.
+Immers wordt nergens in een use case gespecifieerd wat het mogelijke nut hiervan zou zijn.
+Bovendien impliceert iedere implementatie bijkomende voorwaarden op het model, wat de uitbreidbaarheid niet ten goede komt.
+\begin{figure}[H]
+    \centering
+%    \includegraphics[bb=0 0 640 480,scale=0.5]{domein.png}
+%    %ANDERE OPTIE%\resizebox{15cm}{!}{\includegraphics{domein.png}}
+    \caption{Domeinlaag}
+    \label{domein}
+\end{figure}
 \paragraph{}
-De factory package is de hoeksteen van de uitbreidbaarheid van ons model. Dit abstract factory patroon laat ons toe om dynamisch nieuwe typen emergencies en units toe te voegen. Dit zonder andere delen van het model aan te passen. Dit concept wordt zowel voor emergencies als \verb+UnitBuilding+s toegepast. In het eerste geval om de creatie van emergencies door de actor operator generisch te doen verlopen. In het tweede geval voor het laden van de omgeving.
+De factory package is de hoeksteen van de uitbreidbaarheid van ons model.
+Dit abstract factory patroon laat ons toe om dynamisch nieuwe typen emergencies en units toe te voegen.
+Dit zonder andere delen van het model aan te passen. Dit concept wordt zowel voor \verb+Emergency+s als \verb+UnitBuilding+s toegepast.
+In het eerste geval om de creatie van emergencies door de actor operator generisch te doen verlopen.
+In het tweede geval voor het laden van de omgeving.
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[bb=0 0 640 480,scale=0.5]{factory.png}
+%    %ANDERE OPTIE%\resizebox{15cm}{!}{\includegraphics{factory.png}}
+%    \caption{Factory package}
+%    \label{factory}
+%\end{figure}
 \paragraph{}
-Tot slot bevat de controller package alle controllers die de domeinlaag aansturen. Hierbij beschouwen we een abstracte klasse \verb+Controller+. Hierdoor hebben alle controllers een link naar het \verb+World+ object. Dit is een object die het hele domein bijhoudt, waardoor de controllers dit kunnen aanpassen. De controllers zijn behoorlijk gelijklopend met de use cases, waarbij ook voor de initialisatie van de omgeving een aparte controller werd geschreven. In de exception package worden de verschillende exception klassen beschreven en analoog wordt in de userinterface package de userinterface beschreven.
+Tot slot bevat de controller package alle controllers die de domeinlaag aansturen. Zie figuur \ref{controller} voor het klassendiagram van de controllers.
+Hierbij beschouwen we een abstracte klasse \verb+Controller+. Hierdoor hebben alle controllers een link naar het \verb+World+ object.
+Dit is een object die het hele domein bijhoudt, waardoor de controllers dit kunnen aanpassen.
+De controllers zijn behoorlijk gelijklopend met de use cases, waarbij ook voor de initialisatie van de omgeving een aparte controller werd geschreven.
+In de exception package worden de verschillende exception klassen beschreven en analoog wordt in de userinterface package de userinterface beschreven.
+\begin{figure}[H]
+    \centering
+%    \includegraphics[bb=0 0 640 480,scale=0.5]{controller.png}
+%    %ANDERE OPTIE%\resizebox{15cm}{!}{\includegraphics{controller.png}}
+    \caption{Controllermodel}
+    \label{controller}
+\end{figure}
