implementatie Policy (part II)
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@241 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -1,10 +1,24 @@
 \documentclass[a4paper,titlepage]{article}
 \usepackage[dutch]{babel}
+\usepackage{fullpage}
+\usepackage{emp}
+
+\ifx\pdftexversion\undefined
+\usepackage[dvips]{graphicx}
+\else
+\usepackage[pdftex]{graphicx}
+\DeclareGraphicsRule{*}{mps}{*}{}
+\fi
+
 \title{Software Ontwerp - Verslag Iteratie 2\\Prof. T. Holvoet\\Dhr. T. Heyman}
 \author{Willem Van Onsem\\Jonas Vanthornhout\\Pieter-Jan Vuylsteke}
 \date{22 december 2010}
 
 \begin{document}
+\begin{empfile}
+\begin{empcmds}
+input metauml;
+\end{empcmds}
 \begin{titlepage}
 \maketitle
 \end{titlepage}
@@ -33,4 +47,5 @@
 \newpage
 \appendix
 \section{Bijlagen}
+\end{empfile}
 \end{document}
