verder gewerkt aan het verslag+kileproject aangemaakt dat handiger werkt op Linux machines
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@311 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -4,6 +4,8 @@
 \usepackage{emp}
 \usepackage{pst-uml}
 \usepackage{tikz}
+\usepackage{graphicx}
+\graphicspath{{./UML/}}
 \usetikzlibrary{shapes,snakes}
 
 %\ifx\pdftexversion\undefined
