--- a/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/report_iteration2.tex
@@ -35,7 +35,7 @@ input metauml;
 \section{Overzicht}
 \input{overzicht}
 \newpage
-\section{GRASP- en Design Patterns}
+\section{GRASP en Design Patterns}
 \input{graspDesignPatterns}
 \newpage
 \section{Potenti\"ele uitbreidingen}
