--- a/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
@@ -1,3 +1,11 @@
+Dit verslag beschrijft de tweede iteratie van de dispatch systeem voor het onderwerp \textit{Software-Ontwerpen}.
+\paragraph{}
+In de tweede tweede iteratie ligt de nadruk van het project op \textit{Design Patterns}. Dit zijn een set van 23 ontwerp patronen die in 1999 door de \textit{Gang of Four (GoF)} ontwikkelde werden als elegante oplossingen voor algemene problemen. Uiteraard wordt maar een heel beperkte subset van deze patronen in dit project daadwerkelijk ge\"implementeerd (zie sectie \ref{sec:graspDesignPatterns}).
+\paragraph{}
+Daarnaast is het uiteraard de bedoeling dat het project verder uitgebreid wordt. Zo dient het systeem door middel van een beleidsregel zelf voorstellen te doen wat betreft het verdelen van eenheden. Verder wordt ook een extern systeem op het systeem gezet die in staat is machinaal het project aan te sturen. Ook kunnen uitgestuurde eenheden teruggeroepen worden. Tot slot kan een emergency ook geannuleerd worden. Dit laatste aspect diende echter niet te worden ge\"implementeerd.
+%\paragraph{}
+Een deel van het oorspronkelijk project werd herontwikkeld op basis van de eerder vernoemde \textit{Design Patterns}.
+\paragraph{}
 Het verslag is als volgt gestructureerd. In sectie \ref{overzicht} geven we een overzicht van het systeem en zijn subsystemen.
 We tonen ook hoe we de verschillende verantwoordelijkheden hebben toegewezen.
 In sectie \ref{patterns} bespreken we de invloed van GRASP en design patterns op ons ontwerp.
