Begonnen aan strategy pattern "de dispatch systeem" -> "het dispatch systeem" de package listings toegevoegd voor het stukje code bij de teststrategie
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@324 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/inleiding.tex
@@ -1,4 +1,4 @@
-Dit verslag beschrijft de tweede iteratie van de dispatch systeem voor het onderwerp \textit{Software-Ontwerpen}.
+Dit verslag beschrijft de tweede iteratie van het dispatch systeem voor het onderwerp \textit{Software-Ontwerpen}.
 \paragraph{}
 In de tweede tweede iteratie ligt de nadruk van het project op \textit{Design Patterns}. Dit zijn een set van 23 ontwerp patronen die in 1999 door de \textit{Gang of Four (GoF)} ontwikkelde werden als elegante oplossingen voor algemene problemen. Uiteraard wordt maar een heel beperkte subset van deze patronen in dit project daadwerkelijk ge\"implementeerd (zie sectie \ref{sec:graspDesignPatterns}).
 \paragraph{}
