--- a/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
+++ b/ProjectSWOP20102011/src/verslag/iteratie2/graspDesignPatterns.tex
@@ -10,7 +10,7 @@ We stellen onze constraints op onze emergency voor als een boom. Deze implementa
 \end{figure}
 Tot slot kan opgemerkt worden dat in het boek er operaties in de Composite-participant gedefinieerd worden. In deze implementatie voegen we eenvoudigweg geen operaties toe. Het kennen van de parent levert voor \verb+AndDispatchUnitsConstraint+ geen meerwaarde op. Verder kan geargumenteerd worden dat de opbouw van de boom hiermee vastligt: bottom-up, er kan dus bijgevolg geen boom met een tak naar zichzelf bestaan. Tot slot zou het ook kunnen betekenen dat een component op veschillende plaatsen in de boom voorkomt, wat de structuur dus meer dynamiek geeft.
 \subsubsection{State}
-Hoewel we geen \verb+cancel+-emergency use-case moesten implementeren, participeerden we toch op de creatie van nieuwe staten waarin een emergency zich kan bevinden. We modelleerden dan ook een toestandsdiagram zoals op figuur \ref{fig:stateDiagramEmergency}.
+Hoewel we geen \verb+cancel+-emergency use-case moesten implementeren, anticipeerden we toch op de creatie van nieuwe staten waarin een emergency zich kan bevinden. We modelleerden dan ook een toestandsdiagram zoals op figuur \ref{fig:stateDiagramEmergency}.
 \begin{figure}[htb]
 \centering
 \begin{tikzpicture}
@@ -42,3 +42,13 @@ Omdat units en emergencies vaak aangemaakt worden met behulp van een tekstbestan
 \label{fig:factoryMethodPattern}
 \end{figure}
 Een ander probleem is hoe we informatie over deze velden naar buiten kunnen brengen. Hiervoor construeerden we een \verb+EmergencyDescription+ klasse. Deze klasse bevat informatie over de verschillende parameters: hun type, naam en eventueel een beschrijving. Bovendien is deze beschrijving in staat om te controleren of een bepaalde lijst van objecten aan deze beschrijving voldoet.
+\subsubsection{Strategy}
+Om units terug te trekken van een emergency hebben we het \textit{strategy}-pattern toegepast. In de opgave zijn er twee mogelijke manieren.
+Ofwel mag een unit zich terugtrekken, mits hij aan bepaalde voorwaarden voldoet. Ofwel mag deze zich nooit terugtrekken.
+Het voordeel van het \textit{Strategy}-pattern is dat we eenvoudig nieuwe manieren van terugtrekken kunnen toevoegen door een nieuwe subklasse van \texttt{WithdrawBehavior} toe te voegen.
+Ook als er nieuwe soorten units toegevoegd worden, hoeven we niet steeds de hele withdraw-methode te kopi\"eren.
+\begin{figure}[thtb]
+\includegraphics[width=1.0\textwidth]{WithdrawStrategyPattern.pdf}
+\caption{UML diagram van de implementatie van het \textit{Strategy}-pattern bij het terugtrekken van units.}
+\label{fig:withdrawStrategyPattern}
+\end{figure}
